fix: hide bubble arrow when class archived (#46)
* fix: modal z-index

* fix: hide bubble arrow when class archived

* fix: arrow menu not align with bubble username

--- a/src/rogu/ui/ContextMenu/index.scss
+++ b/src/rogu/ui/ContextMenu/index.scss
@@ -84,8 +84,8 @@
   display: block !important;
 }
 
-.sendbird-icon--pressed {
-  display: block !important;
+.rogu-icon--pressed {
+  display: flex !important;
 }
 
 .sendbird__offline {
